# learn_mcp_log

./: .gitignore  LICENSE  Makefile  README.md  cline_config_example.json  config.example.json  config.py  env.example  log_viewer.py  mcp_server.py  openai_proxy.py  proxy.py  pyproject.toml  run_mcp_sse.py  run_proxy.py  run_web.py  setup_config.py  start_servers.py
src/mcp/: addition_server.py  weather_server.py  weather_server_sse.py
src/proxy/: llm_proxy.py
src/web/: app.py
static/css/: style.css
static/js/: app.js
templates/: index.html
