[project]
name = "mcp-test"
version = "1.0.0"
description = "Cline 和大模型交互学习工具"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "mcp>=1.0.0",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100 
