[project]
name = "mcp-proxy-logger"
version = "0.1.0"
description = "A middleware proxy for learning and understanding LLM API and MCP protocol interactions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=1.82.0",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
